--- a/archives/toutiao-search/2023-11-21.md
+++ b/archives/toutiao-search/2023-11-21.md
@@ -1,59 +1,77 @@
 # 2023-11-21
 
-共 355 条
+共 368 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 21 2023 22:00:49 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 21 2023 23:00:41 GMT+0800 (China Standard Time) -->
 1. [国足0-3不敌韩国](https://so.toutiao.com/search?keyword=国足0-3不敌韩国)
-1. [半场：国足0-2韩国 孙兴慜梅开二度](https://so.toutiao.com/search?keyword=半场：国足0-2韩国+孙兴慜梅开二度)
+1. [记者谈比赛第10分钟朱辰杰犯规送点](https://so.toutiao.com/search?keyword=记者谈比赛第10分钟朱辰杰犯规送点)
 1. [运-20起飞 接英雄回家](https://so.toutiao.com/search?keyword=运-20起飞+接英雄回家)
-1. [国内油价四连降！加满一箱省13.5元](https://so.toutiao.com/search?keyword=国内油价四连降！加满一箱省13.5元)
-1. [媒体：国足最需要小心的不是孙兴慜](https://so.toutiao.com/search?keyword=媒体：国足最需要小心的不是孙兴慜)
-1. [天津一儿童医院急诊科挂号排3000多](https://so.toutiao.com/search?keyword=天津一儿童医院急诊科挂号排3000多)
+1. [香港公务员将进入退休高峰期](https://so.toutiao.com/search?keyword=香港公务员将进入退休高峰期)
+1. [为何“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=为何“桂花牌”手表突然爆火)
 1. [缅北向我方移交电诈嫌犯3.1万名](https://so.toutiao.com/search?keyword=缅北向我方移交电诈嫌犯3.1万名)
-1. [孙兴慜进球后做出闭嘴庆祝动作](https://so.toutiao.com/search?keyword=孙兴慜进球后做出闭嘴庆祝动作)
-1. [全军军龄最老的将军今天过生日](https://so.toutiao.com/search?keyword=全军军龄最老的将军今天过生日)
+1. [女子起诉离婚却发现丈夫已去世](https://so.toutiao.com/search?keyword=女子起诉离婚却发现丈夫已去世)
+1. [王涛称中国球迷接机韩国队无法理解](https://so.toutiao.com/search?keyword=王涛称中国球迷接机韩国队无法理解)
+1. [国内油价四连降！加满一箱省13.5元](https://so.toutiao.com/search?keyword=国内油价四连降！加满一箱省13.5元)
 1. [两中学生被迷晕带走？警方辟谣](https://so.toutiao.com/search?keyword=两中学生被迷晕带走？警方辟谣)
 1. [曾志伟回应为缅北电诈头目拍片庆生](https://so.toutiao.com/search?keyword=曾志伟回应为缅北电诈头目拍片庆生)
-1. [斗鱼CEO陈少杰被成都警方逮捕](https://so.toutiao.com/search?keyword=斗鱼CEO陈少杰被成都警方逮捕)
 1. [向佐晒李连杰近照](https://so.toutiao.com/search?keyword=向佐晒李连杰近照)
 1. [警方辟谣白敬亭嫖娼](https://so.toutiao.com/search?keyword=警方辟谣白敬亭嫖娼)
-1. [男子十几年只喝饮料确诊肝癌晚期](https://so.toutiao.com/search?keyword=男子十几年只喝饮料确诊肝癌晚期)
 1. [甘婷婷新片尺度引争议](https://so.toutiao.com/search?keyword=甘婷婷新片尺度引争议)
-1. [女子起诉离婚却发现丈夫已去世](https://so.toutiao.com/search?keyword=女子起诉离婚却发现丈夫已去世)
-1. [假僧人诱奸14名女性被判无期](https://so.toutiao.com/search?keyword=假僧人诱奸14名女性被判无期)
-1. [记者谈比赛第10分钟朱辰杰犯规送点](https://so.toutiao.com/search?keyword=记者谈比赛第10分钟朱辰杰犯规送点)
-1. [中方回应米莱当选阿根廷总统](https://so.toutiao.com/search?keyword=中方回应米莱当选阿根廷总统)
-1. [王涛称中国球迷接机韩国队无法理解](https://so.toutiao.com/search?keyword=王涛称中国球迷接机韩国队无法理解)
-1. [为何“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=为何“桂花牌”手表突然爆火)
-1. [15岁少女坠楼 涉事KTV被刑事立案](https://so.toutiao.com/search?keyword=15岁少女坠楼+涉事KTV被刑事立案)
+1. [斗鱼CEO陈少杰被成都警方逮捕](https://so.toutiao.com/search?keyword=斗鱼CEO陈少杰被成都警方逮捕)
+1. [男子被骗缅北给母亲打电话暗示求救](https://so.toutiao.com/search?keyword=男子被骗缅北给母亲打电话暗示求救)
 1. [麻省理工学院确认一中国博士生身亡](https://so.toutiao.com/search?keyword=麻省理工学院确认一中国博士生身亡)
-1. [韩总统访英 双方都有“竞选考量”](https://so.toutiao.com/search?keyword=韩总统访英+双方都有“竞选考量”)
+1. [巴西19岁醉酒女子遭流浪汉性侵](https://so.toutiao.com/search?keyword=巴西19岁醉酒女子遭流浪汉性侵)
+1. [你有多久没有打开过电视了](https://so.toutiao.com/search?keyword=你有多久没有打开过电视了)
 1. [大小S感谢司法还她们清白](https://so.toutiao.com/search?keyword=大小S感谢司法还她们清白)
+1. [斡旋巴以冲突 世界关注中国声音](https://so.toutiao.com/search?keyword=斡旋巴以冲突+世界关注中国声音)
+1. [《爆裂点》香港发布会](https://so.toutiao.com/search?keyword=《爆裂点》香港发布会)
+1. [特朗普在拜登生日当天晒医生的来信](https://so.toutiao.com/search?keyword=特朗普在拜登生日当天晒医生的来信)
+1. [几块和几十块钱的牙膏有什么区别](https://so.toutiao.com/search?keyword=几块和几十块钱的牙膏有什么区别)
+1. [莫言说于和伟长得普通](https://so.toutiao.com/search?keyword=莫言说于和伟长得普通)
+1. [媒体评加间谍内讧：欠中国一个道歉](https://so.toutiao.com/search?keyword=媒体评加间谍内讧：欠中国一个道歉)
+1. [“70后”女内鬼马凤霞被双开](https://so.toutiao.com/search?keyword=“70后”女内鬼马凤霞被双开)
+1. [男子十几年只喝饮料确诊肝癌晚期](https://so.toutiao.com/search?keyword=男子十几年只喝饮料确诊肝癌晚期)
+1. [一女记者被以逮捕并指控美化哈马斯](https://so.toutiao.com/search?keyword=一女记者被以逮捕并指控美化哈马斯)
+1. [女子查出胰腺癌：不想花钱受罪](https://so.toutiao.com/search?keyword=女子查出胰腺癌：不想花钱受罪)
+1. [安徽阜阳鼓励连休2.5天](https://so.toutiao.com/search?keyword=安徽阜阳鼓励连休2.5天)
+1. [15岁少女坠楼 涉事KTV被刑事立案](https://so.toutiao.com/search?keyword=15岁少女坠楼+涉事KTV被刑事立案)
+1. [假僧人诱奸14名女性被判无期](https://so.toutiao.com/search?keyword=假僧人诱奸14名女性被判无期)
+1. [女儿重启父亲警号 043940欢迎归队](https://so.toutiao.com/search?keyword=女儿重启父亲警号+043940欢迎归队)
+1. [商务车高速强行变道被大货车顶翻](https://so.toutiao.com/search?keyword=商务车高速强行变道被大货车顶翻)
+1. [Redmi K70E将首发天玑8300-Ultra](https://so.toutiao.com/search?keyword=Redmi+K70E将首发天玑8300-Ultra)
+1. [克莱：任何时候保罗说话都得去倾听](https://so.toutiao.com/search?keyword=克莱：任何时候保罗说话都得去倾听)
+1. [西媒：每周四天工作制在比利时遇冷](https://so.toutiao.com/search?keyword=西媒：每周四天工作制在比利时遇冷)
+1. [卢伟冰：K70价格不给友商留空间](https://so.toutiao.com/search?keyword=卢伟冰：K70价格不给友商留空间)
+1. [警方回应奔驰女踹倒路障辱骂工人](https://so.toutiao.com/search?keyword=警方回应奔驰女踹倒路障辱骂工人)
+1. [女子在国外耳边传来熟悉倒车提示音](https://so.toutiao.com/search?keyword=女子在国外耳边传来熟悉倒车提示音)
+1. [9岁男孩与海底捞小哥比拼舞蹈](https://so.toutiao.com/search?keyword=9岁男孩与海底捞小哥比拼舞蹈)
+1. [云南省纪委监委：徐春接受审查调查](https://so.toutiao.com/search?keyword=云南省纪委监委：徐春接受审查调查)
+1. [严跃进：哪类房企可能纳入白名单](https://so.toutiao.com/search?keyword=严跃进：哪类房企可能纳入白名单)
+1. [网友吐槽初中教育：每天13节课](https://so.toutiao.com/search?keyword=网友吐槽初中教育：每天13节课)
+1. [陈林坚遭遇交通意外恐赛季报销](https://so.toutiao.com/search?keyword=陈林坚遭遇交通意外恐赛季报销)
+1. [反中乱港组织“香港众志”副主席获庇护](https://so.toutiao.com/search?keyword=反中乱港组织“香港众志”副主席获庇护)
+1. [“梅卡瓦”坦克为何会被哈马斯击毁](https://so.toutiao.com/search?keyword=“梅卡瓦”坦克为何会被哈马斯击毁)
+1. [我本是高山导演回应酗酒母亲原型](https://so.toutiao.com/search?keyword=我本是高山导演回应酗酒母亲原型)
+1. [马航MH370事件家属：不同意免责领赔偿](https://so.toutiao.com/search?keyword=马航MH370事件家属：不同意免责领赔偿)
+1. [半场：国足0-2韩国 孙兴慜梅开二度](https://so.toutiao.com/search?keyword=半场：国足0-2韩国+孙兴慜梅开二度)
+1. [媒体：国足最需要小心的不是孙兴慜](https://so.toutiao.com/search?keyword=媒体：国足最需要小心的不是孙兴慜)
+1. [天津一儿童医院急诊科挂号排3000多](https://so.toutiao.com/search?keyword=天津一儿童医院急诊科挂号排3000多)
+1. [孙兴慜进球后做出闭嘴庆祝动作](https://so.toutiao.com/search?keyword=孙兴慜进球后做出闭嘴庆祝动作)
+1. [全军军龄最老的将军今天过生日](https://so.toutiao.com/search?keyword=全军军龄最老的将军今天过生日)
+1. [中方回应米莱当选阿根廷总统](https://so.toutiao.com/search?keyword=中方回应米莱当选阿根廷总统)
+1. [韩总统访英 双方都有“竞选考量”](https://so.toutiao.com/search?keyword=韩总统访英+双方都有“竞选考量”)
 1. [俄乌为何都策动对方飞行员叛逃](https://so.toutiao.com/search?keyword=俄乌为何都策动对方飞行员叛逃)
 1. [深圳一女子买菜遇到“辣椒刺客”](https://so.toutiao.com/search?keyword=深圳一女子买菜遇到“辣椒刺客”)
-1. [几块和几十块钱的牙膏有什么区别](https://so.toutiao.com/search?keyword=几块和几十块钱的牙膏有什么区别)
-1. [网友吐槽初中教育：每天13节课](https://so.toutiao.com/search?keyword=网友吐槽初中教育：每天13节课)
-1. [安徽阜阳鼓励连休2.5天](https://so.toutiao.com/search?keyword=安徽阜阳鼓励连休2.5天)
-1. [巴西19岁醉酒女子遭流浪汉性侵](https://so.toutiao.com/search?keyword=巴西19岁醉酒女子遭流浪汉性侵)
 1. [拜登81岁生日当天“赦免”火鸡](https://so.toutiao.com/search?keyword=拜登81岁生日当天“赦免”火鸡)
 1. [寒潮大风暴雪三警齐发](https://so.toutiao.com/search?keyword=寒潮大风暴雪三警齐发)
-1. [马航MH370事件家属：不同意免责领赔偿](https://so.toutiao.com/search?keyword=马航MH370事件家属：不同意免责领赔偿)
-1. [“70后”女内鬼马凤霞被双开](https://so.toutiao.com/search?keyword=“70后”女内鬼马凤霞被双开)
 1. [2024年美国总统大选辩论日程揭晓](https://so.toutiao.com/search?keyword=2024年美国总统大选辩论日程揭晓)
 1. [加沙印尼医院内毁灭性画面曝光](https://so.toutiao.com/search?keyword=加沙印尼医院内毁灭性画面曝光)
 1. [媒体：海底捞跳舞引流重心有些偏了](https://so.toutiao.com/search?keyword=媒体：海底捞跳舞引流重心有些偏了)
-1. [女子查出胰腺癌：不想花钱受罪](https://so.toutiao.com/search?keyword=女子查出胰腺癌：不想花钱受罪)
 1. [毛剑卿驳斥韩媒评价国足少林足球论](https://so.toutiao.com/search?keyword=毛剑卿驳斥韩媒评价国足少林足球论)
 1. [盘点广州车展的重磅SUV](https://so.toutiao.com/search?keyword=盘点广州车展的重磅SUV)
-1. [女儿重启父亲警号 043940欢迎归队](https://so.toutiao.com/search?keyword=女儿重启父亲警号+043940欢迎归队)
 1. [吴千语施伯雄计划明年举办婚礼](https://so.toutiao.com/search?keyword=吴千语施伯雄计划明年举办婚礼)
-1. [莫言说于和伟长得普通](https://so.toutiao.com/search?keyword=莫言说于和伟长得普通)
 1. [凯尔登：希望快船队保持健康](https://so.toutiao.com/search?keyword=凯尔登：希望快船队保持健康)
-1. [9岁男孩与海底捞小哥比拼舞蹈](https://so.toutiao.com/search?keyword=9岁男孩与海底捞小哥比拼舞蹈)
-1. [卢伟冰：K70价格不给友商留空间](https://so.toutiao.com/search?keyword=卢伟冰：K70价格不给友商留空间)
-1. [严跃进：哪类房企可能纳入白名单](https://so.toutiao.com/search?keyword=严跃进：哪类房企可能纳入白名单)
-1. [商务车高速强行变道被大货车顶翻](https://so.toutiao.com/search?keyword=商务车高速强行变道被大货车顶翻)
 1. [国足VS韩国首发身价年龄对比](https://so.toutiao.com/search?keyword=国足VS韩国首发身价年龄对比)
 1. [国足vs韩国](https://so.toutiao.com/search?keyword=国足vs韩国)
 1. [河北黄骅市一货车与火车相撞](https://so.toutiao.com/search?keyword=河北黄骅市一货车与火车相撞)
@@ -61,7 +79,6 @@
 1. [孙兴慜：要让中国队难以喘息](https://so.toutiao.com/search?keyword=孙兴慜：要让中国队难以喘息)
 1. [湖北一村占良田装光伏？镇政府回应](https://so.toutiao.com/search?keyword=湖北一村占良田装光伏？镇政府回应)
 1. [华为回应网传鸿蒙明年将不兼容安卓](https://so.toutiao.com/search?keyword=华为回应网传鸿蒙明年将不兼容安卓)
-1. [媒体评加间谍内讧：欠中国一个道歉](https://so.toutiao.com/search?keyword=媒体评加间谍内讧：欠中国一个道歉)
 1. [徐亮谈昔日和韩国比赛：压着他们踢](https://so.toutiao.com/search?keyword=徐亮谈昔日和韩国比赛：压着他们踢)
 1. [媒体对话MH370失联者家属](https://so.toutiao.com/search?keyword=媒体对话MH370失联者家属)
 1. [今晚世预赛马宁执法叙利亚VS日本](https://so.toutiao.com/search?keyword=今晚世预赛马宁执法叙利亚VS日本)
@@ -78,7 +95,6 @@
 1. [白敬亭方辟谣嫖娼被抓](https://so.toutiao.com/search?keyword=白敬亭方辟谣嫖娼被抓)
 1. [15岁少女坠亡 涉事KTV被刑事立案](https://so.toutiao.com/search?keyword=15岁少女坠亡+涉事KTV被刑事立案)
 1. [柳州高中男生当街捅伤高中女生](https://so.toutiao.com/search?keyword=柳州高中男生当街捅伤高中女生)
-1. [特朗普在拜登生日当天晒医生的来信](https://so.toutiao.com/search?keyword=特朗普在拜登生日当天晒医生的来信)
 1. [日本：接到朝鲜通报将发射一颗卫星](https://so.toutiao.com/search?keyword=日本：接到朝鲜通报将发射一颗卫星)
 1. [涂猛卸任中国篮协秘书长 徐岚接任](https://so.toutiao.com/search?keyword=涂猛卸任中国篮协秘书长+徐岚接任)
 1. [襄阳健桥医院违规开出生证被罚10万](https://so.toutiao.com/search?keyword=襄阳健桥医院违规开出生证被罚10万)
@@ -99,7 +115,6 @@
 1. [字母哥近两战场均41分14板8助攻](https://so.toutiao.com/search?keyword=字母哥近两战场均41分14板8助攻)
 1. [佘诗曼打卡《新闻女王》路牌](https://so.toutiao.com/search?keyword=佘诗曼打卡《新闻女王》路牌)
 1. [韩国男足称要零封国足](https://so.toutiao.com/search?keyword=韩国男足称要零封国足)
-1. [警方回应奔驰女踹倒路障辱骂工人](https://so.toutiao.com/search?keyword=警方回应奔驰女踹倒路障辱骂工人)
 1. [电视家宣布暂停服务](https://so.toutiao.com/search?keyword=电视家宣布暂停服务)
 1. [江苏省委原副书记张敬华被判14年](https://so.toutiao.com/search?keyword=江苏省委原副书记张敬华被判14年)
 1. [物价一直下跌是好事吗](https://so.toutiao.com/search?keyword=物价一直下跌是好事吗)
@@ -156,7 +171,6 @@
 1. [小卡：每个人都在适应新角色](https://so.toutiao.com/search?keyword=小卡：每个人都在适应新角色)
 1. [侯友宜批赖清德“台独”主张是引战](https://so.toutiao.com/search?keyword=侯友宜批赖清德“台独”主张是引战)
 1. [中方谈韩总统涉华言论：别指手画脚](https://so.toutiao.com/search?keyword=中方谈韩总统涉华言论：别指手画脚)
-1. [反中乱港组织“香港众志”副主席获庇护](https://so.toutiao.com/search?keyword=反中乱港组织“香港众志”副主席获庇护)
 1. [韩媒：握住中国的手](https://so.toutiao.com/search?keyword=韩媒：握住中国的手)
 1. [鹈鹕终结国王6连胜](https://so.toutiao.com/search?keyword=鹈鹕终结国王6连胜)
 1. [退休姥爷辅导孙女作业被网友蹭课](https://so.toutiao.com/search?keyword=退休姥爷辅导孙女作业被网友蹭课)
@@ -238,7 +252,6 @@
 1. [家长代表号召每家交200为老师提薪](https://so.toutiao.com/search?keyword=家长代表号召每家交200为老师提薪)
 1. [香港田径总会就马拉松冲线事件致歉](https://so.toutiao.com/search?keyword=香港田径总会就马拉松冲线事件致歉)
 1. [巴西总统卢拉：祝阿根廷新政府好运](https://so.toutiao.com/search?keyword=巴西总统卢拉：祝阿根廷新政府好运)
-1. [香港公务员将进入退休高峰期](https://so.toutiao.com/search?keyword=香港公务员将进入退休高峰期)
 1. [为何副部级官员降科员后会二次被查](https://so.toutiao.com/search?keyword=为何副部级官员降科员后会二次被查)
 1. [媒体：水庆霞离任早在意料之中](https://so.toutiao.com/search?keyword=媒体：水庆霞离任早在意料之中)
 1. [孩子满月酒 娘家人展现“底气”](https://so.toutiao.com/search?keyword=孩子满月酒+娘家人展现“底气”)
